<resources>
    <string name="app_name">Joyers</string>
    <string name="joyers">Joyers_image</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username_email">Username / Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="join_with">Join With</string>
    <string name="a_new_joyer">A New Joyer?</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="reset_password_in_two_steps">Reset password in two steps.</string>
    <string name="send_verification_code">Send Verification Code :</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="next">Next</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="already_a_joyer">Already a Joyer?</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="email_sent">We have sent a code to your email</string>
    <string name="number_sent">We have sent a code to your phone number</string>


    <!-- font weight -->
    <integer name="normal">400</integer>
    <integer name="bold">700</integer>
    <integer name="light">300</integer>
    <integer name="thin">100</integer>
    <integer name="medium">500</integer>
    <integer name="semiBold">600</integer>
    <integer name="extraBold">800</integer>
    <integer name="extraLight">200</integer>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="onlyUserName">\@username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invalidEmail">Invalid email address\n</string>
    <string name="weak">Weak</string>
    <string name="good">Good</string>
    <string name="strong">Strong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="header">Header</string>
    <string name="name">Name *</string>
    <string name="name_only">Name</string>
    <string name="joyer_name">Joyer Name</string>
    <string name="joyer_location">Joyer Location *</string>
    <string name="joyer_location_only">Joyer Location</string>
    <string name="select_location">Select Location</string>
    <string name="skip">Skip</string>
    <string name="joyer_status">Joyer Status</string>
    <string name="identity">Identity</string>
    <string name="status">Status</string>
    <string name="classic">Classic</string>
    <string name="celebrity">Celebrity</string>
    <string name="proficient">Proficient</string>
    <string name="leader">Leader</string>
    <string name="provider">Provider</string>
    <string name="clarifications">Clarifications</string>
    <string name="title1">Joyers are categorized into different statuses based on their titles, which determine their roles and functionalities within the app. Here is an overview of these statuses:</string>
    <string name="celebrity_text"><![CDATA[<font color="#D69E3A">Celebrity</font> : Celebrities are Joyers recognized or certified by a local or international organization.]]></string>
    <string name="proficient_text"><![CDATA[<font color="#D69E3A">Proficient</font> : Proficient Joyers are professionals or individuals skilled in a specific field.]]></string>
    <string name="leader_text"><![CDATA[<font color="#D69E3A">Leader</font> : Leaders are Joyers holding a leadership position.]]></string>
    <string name="provider_text"><![CDATA[<font color="#D69E3A">Provider</font> : Providers are organizations or companies offering products or services.]]></string>
    <string name="classic_text"><![CDATA[<font color="#D69E3A">Classic</font> : Classic Joyers are registered with a social title rather than a professional title.]]></string>
    <string name="title2">Based on this classification, Joyers are registered under either social or professional titles, which correspond to one of five statuses: social titles fall under the <b>Classic</b> status, while professional titles fall under <b>Celebrity, Proficient, Leader,</b> or <b>Provider</b> statuses.</string>
    <string name="title3">In light of these classifications, <b>Classic</b> Joyers have access to all social and professional features of the Joyers app, with the exception of offering or selling products and services online. They can request or purchase products and services from other Joyers but are not permitted to sell them. Conversely, Joyers with the <b>Celebrity, Proficient, Leader,</b> or <b>Provider</b> status can access all social and professional features of the Joyers app, including the ability to offer and sell products and services online to other Joyers.</string>
    <string name="title4">Together, these statuses ensure every Joyer has access to features suited to their role or expertise.\n</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="title">Title</string>
    <string name="select_title">Select Title</string>
    <string name="oath">Oath</string>


    <string name="joyer_auth_1"><![CDATA[
My <font color="#D69E3A"><b>FREEDOM</b></font> is to Enjoy Life,<br/>
With The <font color="#D69E3A"><b>STYLE</b></font> I Choose,<br/>
Working <font color="#D69E3A"><b>HARD</b></font> to Achieve My Goals,<br/>
Without Harming <font color="#D69E3A"><b>MYSELF</b></font>,<br/>
Nor My <font color="#D69E3A"><b>PARTNERS</b></font> on Earth.
]]></string>

    <string name="joyer_auth_2"><![CDATA[
My Having <font color="#D69E3A"><b>JOY</b></font> in This Journey,<br/>
<font color="#D69E3A"><b>BELOVED</b></font> Family & Friends.
]]></string>

    <string name="joyer_auth_3"><![CDATA[
&amp; By Doing So,
]]></string>

    <string name="joyer_auth_4"><![CDATA[
I Will Make This <font color="#D69E3A"><b>PLANET</b></font> a Better Place,<br/>
&amp; I Will Gain The <font color="#D69E3A"><b>POWER</b></font> of Life!
]]></string>
    <string name="take_photo_from_camera">Take Photo from Camera</string>
    <string name="take_image_from_gallery">Take Image from Gallery</string>
    <string name="pick_multiple_images">Pick Multiple Images</string>
    <string name="pick_image">Pick Image</string>

    <string name="search">Search</string>
    <string name="search_speciality">Search Title</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="invaild_email">The email entered is invalid. Please try again.</string>
    <string name="invaild_phone">The mobile number entered is invalid. Please try again.</string>
    <string name="username_is_already_taken">This username is already taken. Please try another.</string>
    <string name="forty_five">45</string>
    <string name="apply">Apply</string>
    <string name="code_sent_to_email">Enter the code sent to your email.</string>
    <string name="code_sent_to_phone">Enter the code sent to your phone number.</string>

    <string name="ghost_description">
    <![CDATA[
    <font color="#FFD700">Ghost</font> : Ghost Joyer’s (Following &amp; Followers) are not seen by anyone, except the account owner.
    ]]>
</string>
    <string name="post_dummy_content"><![CDATA[Hi there! I’m using the best platform in this Globe, it’s Joyers Network! t’s an Amazing Social Platform which represent EVERY single aspect in my life! I’ve suggested it for many of my Friends who likes to create their Business, enjoy Hobbies & ntertaints! Guys, Let’s Joy with the Joyers Network!...]]></string>
    <string name="joy_line">Joy Line</string>
    <string name="place_to_visit_usa">Place To Visit_USA</string>
    <string name="media_library">Media Library</string>
    <string name="media_height">Media Height :</string>
    <string name="layout">Layout :</string>
    <string name="view_1">View 1</string>
    <string name="view_2">View 2</string>
    <string name="view_3">View 3</string>


</resources>



