<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.auth.JoyersAuthActivity">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="145dp"
                        android:layout_height="55dp"
                        android:src="@drawable/joyer_logo" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/oath"
                        android:textColor="@color/light_black"
                        android:textFontWeight="@integer/semiBold"
                        android:textSize="44sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/black" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/curved_light_grey"
                android:orientation="vertical"
                android:padding="15dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/joyer_auth_1"
                    android:textColor="@color/light_black"
                    android:layout_marginTop="14dp"
                    android:textFontWeight="@integer/semiBold"
                    android:textSize="19sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:autoLink="none"
                    android:text="@string/joyer_auth_2"
                    android:textColor="@color/light_black"
                    android:textFontWeight="@integer/semiBold"
                    android:textSize="19sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:autoLink="none"
                    android:text="@string/joyer_auth_3"
                    android:textColor="@color/light_black"
                    android:textFontWeight="@integer/semiBold"
                    android:textSize="19sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="15dp"
                    android:autoLink="none"
                    android:text="@string/joyer_auth_4"
                    android:textColor="@color/light_black"
                    android:textFontWeight="@integer/semiBold"
                    android:textSize="19sp" />


            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/fab"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="56dp"
            android:background="@drawable/round_golden"
            android:contentDescription="@string/floating_action_button"
            app:srcCompat="@drawable/outline_arrow_forward" />

    </FrameLayout>


</layout>