<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signup.PageThreeFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp"
                tools:context=".ui.signup.PageOneFragment">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/joyer_status"
                    android:textColor="@color/light_black"
                    android:textFontWeight="600"
                    android:textSize="18sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/classic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/golden_background"
                    android:gravity="center"
                    android:padding="17dp"
                    android:text="@string/classic"
                    android:textColor="@color/white"
                    android:textFontWeight="600"
                    android:textSize="16sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/title"
                    android:textColor="@color/light_black"
                    android:textFontWeight="600"
                    android:textSize="18sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/golden_curved_white_inside"
                    android:gravity="center"
                    android:padding="17dp"
                    android:text="@string/select_title"
                    android:textColor="@color/black"
                    android:textFontWeight="600"
                    android:textSize="16sp" />


            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/next"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/round_golden"
            android:visibility="gone">


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/outline_arrow_forward" />
        </LinearLayout>

        <include android:id="@+id/progress_bar" layout="@layout/layout_progress_bar" />

    </FrameLayout>
</layout>